re-factored to use subscribe

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <button id="confused-btn">Confused</button>
     <button id="clock-btn">Clock</button>
 
+    <button id="random-btn">Rand</button>
+
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.1/redux.js"></script>
